# simple-flask-api

./: LICENSE  azure-pipelines.yml  pyproject.toml
myapi/: application.py  products.sqlite3
myapi/static/: _specs.yaml  specs.yaml
tests/: test_myapi.py
