[tool.poetry]
name = "myapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
flask-marshmallow = "^0.14.0"
Flask-SQLAlchemy = "^2.4.4"
marshmallow-sqlalchemy = "^0.24.0"
SQLAlchemy = "^1.3.20"
flask-swagger-ui = "^3.36.0"
Flask-Cors = "^3.0.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
